[tool.poetry]
name = "diaudeval"
version = "0.1.0"
description = "Voice activity and sound quality evaluation tool"
authors = ["Connor Bechler <cbechler2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
librosa = "^0.10.2.post1"
soundfile = "^0.12.1"
mosqito = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
